  threads created by the factory.

* Smile mapper

  We have added a JAX-RS mapper encoding responses using Smile.  Smile is a
  highly efficient binary encoding of JSON data.  For more information on
  Smile see: http://wiki.fasterxml.com/SmileFormatSpec

* Library upgrades
  - joda-time to 2.4
  - Jersey to 2.12
  - Jetty to 9.2.2
  - Jackson to 2.4.2

Platform 1.04

* RPM packaging

  We added support to rest-server-base for packaging projects into RPMs.
  This profile is activated on Linux by creating a file .build-rpm in
  the root of the module or submodule. This file can be empty. The RPM
  is attached as an additional artifact.

  The username used to run the server defaults to ${project.artifactId}
  and can be changed by setting the property ${project.rpm.username}.

  The RPM will stop the server upon upgrade or removal and will refuse
  to install if the server username does not exist.

* Maven 3.2.2 required

  In order to support RPM packaging, we increased the minimum version of
  Maven to 3.2.2.

* Findbugs run by default

  Findbugs is now hooked into the verify lifecycle phase.

* Library upgrades
  - Guava to 17.0

* Maven plugin upgrades
  - findbugs-maven-plugin to 2.5.2
  - maven-release-plugin to 2.5

Platform 1.03

* JAX-RS 2

  We have upgraded to Jersey 2.9.1 which implements the JAX-RS 2 specification.
  Platform clients need to change the dependency:

    <groupId>com.sun.jersey</groupId>
    <artifactId>jersey-core</artifactId>

  to:

    <groupId>javax.ws.rs</groupId>
    <artifactId>javax.ws.rs-api</artifactId>

  As part of this upgrade we have introduced an explicit binder for JAX-RS
  resources. For example, the following registers the person JAX-RS resource:

    JaxrsBinder.jaxrsBinder(binder).bind(PersonResource.class)

  The new explicit binding code is backwards compatible with the "binding
  scraping" code, so you do not need to immediately update your code. The new